// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDatepicker should render correctly 1`] = `
<div class="m-datepicker">
    <div class="m-input-style m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDatepicker-uuid" aria-haspopup="true" aria-controls="mDatepicker-uuid-controls-1 mDatepicker-uuid-controls-2" placeholder="m-datepicker:placeholder" value=""> </div>
            <div class="m-input-style__body__right">
                <button type="button" aria-controls="mDatepicker-uuid" class="m-icon-button m--is-skin-light m--has-ripple" style="width:22px;height:22px;font-size:20px;">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </button>
            </div>
        </div>
    </div>
    <div class="m-validation-message m-datepicker__validation-message"></div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;

exports[`MDatepicker should render correctly min/max time 1`] = `
<div class="m-datepicker">
    <div class="m-input-style m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDatepicker-uuid" aria-haspopup="true" aria-controls="mDatepicker-uuid-controls-1 mDatepicker-uuid-controls-2" placeholder="m-datepicker:placeholder" value=""> </div>
            <div class="m-input-style__body__right">
                <button type="button" aria-controls="mDatepicker-uuid" class="m-icon-button m--is-skin-light m--has-ripple" style="width:22px;height:22px;font-size:20px;">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </button>
            </div>
        </div>
    </div>
    <div class="m-validation-message m-datepicker__validation-message"></div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;

exports[`MDatepicker should render correctly when disabled is set 1`] = `
<div class="m-datepicker m--is-disabled">
    <div class="m-input-style m--is-disabled m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDatepicker-uuid" aria-haspopup="true" aria-controls="mDatepicker-uuid-controls-1 mDatepicker-uuid-controls-2" disabled="disabled" placeholder="m-datepicker:placeholder" value=""> </div>
            <div class="m-input-style__body__right">
                <button disabled="disabled" type="button" aria-controls="mDatepicker-uuid" class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled" style="width:22px;height:22px;font-size:20px;">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </button>
            </div>
        </div>
    </div>
    <div class="m-validation-message m-datepicker__validation-message"></div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;

exports[`MDatepicker should render correctly when error is set 1`] = `
<div class="m-datepicker m--has-error m--has-validation-message">
    <div class="m-input-style m--has-error m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDatepicker-uuid" aria-haspopup="true" aria-controls="mDatepicker-uuid-controls-1 mDatepicker-uuid-controls-2" placeholder="m-datepicker:placeholder" value=""> </div>
            <div class="m-input-style__body__right">
                <button type="button" aria-controls="mDatepicker-uuid" class="m-icon-button m--is-skin-light m--has-ripple" style="width:22px;height:22px;font-size:20px;">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </button>
            </div>
        </div>
    </div>
    <div class="m-validation-message m-datepicker__validation-message">
        <div class="m-validation-message__wrap">
            <p class="m-validation-message__error">
                <svg width="1em" height="1em" class="m-icon m-validation-message__error__icon">
                    <title>m-validation-message:title-error-icon</title>
                    <use aria-hidden="true"></use>
                </svg> <span class="m-validation-message__text">Nostrud laboris quis velit voluptate aute elit elit non.</span></p>
        </div>
    </div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;

exports[`MDatepicker should render correctly when valid is set 1`] = `
<div class="m-datepicker m--is-valid m--has-validation-message">
    <div class="m-input-style m--is-valid m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDatepicker-uuid" aria-haspopup="true" aria-controls="mDatepicker-uuid-controls-1 mDatepicker-uuid-controls-2" placeholder="m-datepicker:placeholder" value=""> </div>
            <div class="m-input-style__body__right">
                <button type="button" aria-controls="mDatepicker-uuid" class="m-icon-button m--is-skin-light m--has-ripple" style="width:22px;height:22px;font-size:20px;">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </button>
            </div>
        </div>
    </div>
    <div class="m-validation-message m-datepicker__validation-message">
        <div class="m-validation-message__wrap">
            <p class="m-validation-message__valid">
                <svg width="1em" height="1em" class="m-icon m-validation-message__valid__icon">
                    <title>m-validation-message:title-valid-icon</title>
                    <use aria-hidden="true"></use>
                </svg> <span class="m-validation-message__text">Nostrud laboris quis velit voluptate aute elit elit non.</span></p>
        </div>
    </div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;

exports[`MDatepicker should render correctly when waiting is set 1`] = `
<div class="m-datepicker m--is-waiting">
    <div class="m-input-style m--is-waiting m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDatepicker-uuid" aria-haspopup="true" aria-controls="mDatepicker-uuid-controls-1 mDatepicker-uuid-controls-2" disabled="disabled" placeholder="m-datepicker:placeholder" value=""> </div>
            <div class="m-input-style__body__right">
                <button disabled="disabled" type="button" aria-controls="mDatepicker-uuid" class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled" style="width:22px;height:22px;font-size:20px;">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </button>
            </div>
            <div class="m-spinner m-input-style__spinner">
                <div></div>
            </div>
        </div>
    </div>
    <div class="m-validation-message m-datepicker__validation-message"></div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;
